--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -199,12 +199,10 @@ section {
 }
 
 .header .logo span {
-  font-size: 30px;
+  font-size: 22px;
   font-weight: 700;
-  letter-spacing: 1px;
-  color: #012970;
-  /* font-family: "Nunito", sans-serif; */
-  margin-top: 3px;
+  color: #050505;
+  margin-top: 15px;
 }
 
 /*--------------------------------------------------------------
@@ -275,7 +273,7 @@ section {
 .navbar .dropdown ul {
   display: block;
   position: absolute;
-  /* left: -254px; */
+  right: -84px;
   top: calc(100% + 30px);
   margin: 0;
   padding: 10px 0;
@@ -289,7 +287,7 @@ section {
 }
 
 .navbar .dropdown ul li {
-  min-width: 200px;
+  min-width: 170px;
 }
 
 .navbar .dropdown ul a {
@@ -2606,8 +2604,14 @@ padding-inline: 10%;
   box-shadow: -1px 0px 2px 2px #c6cec8;
 
 }
-.search-box-m{
-  margin-inline:200px;
+.search-box-m {
+  margin-inline: 150px;
+}
+
+@media (max-width: 867px) { 
+  .search-box-m {
+    margin-inline: 0;
+  }
 }
 .search-form {
   margin: 0px !important;
@@ -2679,7 +2683,7 @@ padding-inline: 10%;
   }
   .office-address{
     text-align: end;
-    color: #6c6c6c;
+    color: #9b9b9b !important;
     position: relative;
   }
   .left-br{
@@ -2879,3 +2883,97 @@ clinet
   align-items: center;
 }
 
+.btn-dasMain{
+  background-color: var(--darkColor);
+  color: white !important;
+  display: inline-block;
+  padding-inline: 34px !important;
+  /* padding-block: 8px; */
+  border: 1px solid var(--darkColor);
+  border-radius: 5px;
+  border: none;
+height: 55px;
+}
+.btn-siteMain{
+  background-color: var(--darkColor);
+  color: white !important;
+  display: inline-block;
+  padding-inline: 34px !important;
+  padding-block: 8px;
+  border: 1px solid var(--darkColor);
+  border-radius: 5px;
+  margin: 10px 5px;
+  border: none;
+}
+.provider-conent{
+  margin-top: 110px;
+  margin-bottom: 50px;
+
+}
+.error-message{
+  font-size: 15px;
+  color:#d196a9 !important
+ }
+ .container-isempty {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-isempty img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.offer-box {
+  text-align: end;
+  /* padding: 10px; */
+}
+.card-offices {
+  margin-bottom: 30px;
+  border: none;
+  border-radius: 10px;
+  padding: 16px;
+  box-shadow: rgba(17, 17, 26, 0.1) 1px 1px 16px 8px;
+
+}
+.offer-img {
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.img-fluid {
+  max-width: 100%;
+  /* height: auto; */
+}
+.icon_offer{
+  font-size: 20px !important;
+  color: var(--mainColor);
+}
+.p_offer{
+  font-size: 18px !important
+}
+.conform-text{
+  font-size: 18px;
+  color:#d196a9 !important
+}
+.nav-item-site {
+  list-style: none;
+}
+.nav-item-site ul {
+  list-style-type: none;
+}
+.mainColor{
+  color: var(--mainColor) !important;
+}
+.darkColor{
+  color: var(--darkColor) !important;
+}
+.my-mt{
+  margin-top: 100px;
+}
+.price-element-h5{
+  text-wrap: nowrap;
+}
